--- a/Cinema_Project/appsettings.json
+++ b/Cinema_Project/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  //SQL CONNECTION
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=.;Initial Catalog=cinema_project_db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
+
